--- a/.github/workflows/apply-labels.yaml
+++ b/.github/workflows/apply-labels.yaml
@@ -38,7 +38,7 @@ jobs:
     name: Test if statement
     runs-on: ubuntu-latest
     needs: define-variables
-    if: ${{ needs.define-variables.outputs.label_type == 'deploy' }}
+    if: ${{ needs.define-variables.outputs.label_type == 'deploy' || needs.define-variables.outputs.app_name == 'index' }}
     steps:
       - id: test_if
         run: |
