--- a/.github/workflows/apply-labels.yaml
+++ b/.github/workflows/apply-labels.yaml
@@ -38,7 +38,7 @@ jobs:
     name: Test if statement
     runs-on: ubuntu-latest
     needs: define-variables
-    if: ${{ contains(github.event.pull_request.labels.*.name, 'index') }}
+    if: ${{ contains(github.event.pull_request.labels.*.name, 'deploy / index') }}
     steps:
       - id: test_if
         run: |
