--- a/.github/workflows/apply-labels.yaml
+++ b/.github/workflows/apply-labels.yaml
@@ -34,13 +34,24 @@ jobs:
   #         echo "app_name: ${{ needs.define-variables.outputs.app_name }}"
 
   # Test if statement
-  test-if:
-    name: Test if statement
+  # test-if:
+  #   name: Test if statement
+  #   runs-on: ubuntu-latest
+  #   needs: define-variables
+  #   if: ${{ contains(github.event.pull_request.labels.*.name, 'deploy / index') }}
+  #   steps:
+  #     - id: test_if
+  #       run: |
+  #         echo ${{ github.event.pull_request.labels }}
+  #         echo "This ran..."
+
+  # Test env concatenation
+  test-concat:
+    name: Test concatenation of env variables
     runs-on: ubuntu-latest
     needs: define-variables
-    if: ${{ contains(github.event.pull_request.labels.*.name, 'deploy / index') }}
+    env:
+      CONCAT: deployed / ${{ needs.define-variables.outputs.label_type }}-${{ needs.define-variables.outputs.app_name }}
     steps:
-      - id: test_if
-        run: |
-          echo ${{ github.event.pull_request.labels }}
-          echo "This ran..."
+      - id: echo_concat
+        run: echo $CONCAT
