--- a/.github/workflows/apply-labels.yaml
+++ b/.github/workflows/apply-labels.yaml
@@ -38,11 +38,15 @@ jobs:
     name: Test if statement
     runs-on: ubuntu-latest
     needs: define-variables
-    if: ${{ !contains(github.event.pull_request.labels.*.name, 'deploy / index') }}
+    env:
+      CONCAT: ${{ needs.define-variables.outputs.label_type }}-${{ needs.define-variables.outputs.app_name }}
     steps:
       - id: test_if
+        if: ${{ !contains(github.event.pull_request.labels.*.name, github.env.CONCAT) }}
         run: |
           echo "This ran..."
+          echo concat: ${{ github.env.CONCAT }}
+          echo label: ${{ github.event.label }}
 
   # Test env concatenation
   # test-concat:
