--- a/.github/workflows/apply-labels.yaml
+++ b/.github/workflows/apply-labels.yaml
@@ -39,7 +39,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: define-variables
     env:
-      CONCAT: ${{ needs.define-variables.outputs.label_type }}-${{ needs.define-variables.outputs.app_name }}
+      CONCAT: $(echo "${{ needs.define-variables.outputs.label_type }}-${{ needs.define-variables.outputs.app_name }}")
     steps:
       - id: test_if
         if: ${{ !contains(github.event.pull_request.labels.*.name, github.env.CONCAT) }}
