--- a/.github/workflows/apply-labels.yaml
+++ b/.github/workflows/apply-labels.yaml
@@ -38,9 +38,10 @@ jobs:
     name: Test if statement
     runs-on: ubuntu-latest
     needs: define-variables
-    env:
-      CONCAT: $(echo "${{ needs.define-variables.outputs.label_type }}-${{ needs.define-variables.outputs.app_name }}")
     steps:
+      - id: set_concat
+        run: |
+          echo "CONCAT=${needs.define-variables.outputs.label_type}-${needs.define-variables.outputs.app_name}" >> "${GITHUB_ENV}"
       - id: test_if
         if: ${{ !contains(github.event.pull_request.labels.*.name, github.env.CONCAT) }}
         run: |
